04.chirpstack_v4/kubernetes/01.create__Namespace.yaml

---

apiVersion: v1
kind: Namespace
metadata:
  name: chirpstack-v4
  annotations:
    field.cattle.io/containerDefaultResourceLimit: '{}'
#    key: string
  labels:
    {}
#    key: string
#  namespace: string
spec:
#  finalizers:
#    - string
