04.chirpstack_v4/kubernetes/03.chirpstack-v4-mosquitto__Deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirpstack-v4-mosquitto-deployment
  namespace: chirpstack-v4
  labels:
    app: chirpstack-v4-mosquitto-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chirpstack-v4-mosquitto-deployment
  template:
    metadata:
      labels:
        app: chirpstack-v4-mosquitto-deployment
    spec:
      containers:
        - name: chirpstack-v4-mosquitto
          image: eclipse-mosquitto:2.0.22
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - name: mqtts
              containerPort: 8883
          volumeMounts:
            # agora montamos os arquivos já “arrumados”
            - name: mosquitto-config-vol
              mountPath: /mosquitto/config
              readOnly: true
            - name: mosquitto-certs-vol
              mountPath: /mosquitto/certs
              readOnly: true
            - name: mosquitto-auth-vol
              mountPath: /mosquitto/auth
              readOnly: true
          imagePullPolicy: IfNotPresent

      volumes:
        # fontes
        - name: chirpstack-v4-mosquitto-config
          configMap:
            name: chirpstack-v4-mosquitto-config-map

        - name: chirpstack-v4-mosquitto-tls
          secret:
            secretName: chirpstack-v4-mosquitto-tls

        - name: mosquitto-auth-secret
          secret:
            secretName: mosquitto-auth

        # destinos (graváveis)
        - name: mosquitto-auth-vol
          emptyDir: {}
        - name: mosquitto-certs-vol
          emptyDir: {}
        - name: mosquitto-config-vol
          emptyDir: {}

      restartPolicy: Always
