04.chirpstack_v4/kubernetes/07.chirpstack-v4-postgresql__Deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirpstack-v4-ns-as-postgresql-deployment
  namespace: chirpstack-v4
  labels:
    app: chirpstack-v4-ns-as-postgresql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chirpstack-v4-ns-as-postgresql-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chirpstack-v4-ns-as-postgresql-deployment
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: chirpstack-v4-ns-as-postgresql
          image: postgres:17.5
          command: ["docker-entrypoint.sh"]
          args: ["postgres", "-p", "5432"]
          securityContext:
            runAsUser: 999
            runAsGroup: 999
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-socket-dir
              mountPath: /var/run/postgresql
            - name: configmap-init-ns-as
              mountPath: /docker-entrypoint-initdb.d
            - name: oci-fss-pvc-postgresql-data-chirpstack-v4-ns-as
              mountPath: /var/lib/postgresql/data
              subPath: chirpstack-v4-ns-as
          imagePullPolicy: Always

      volumes:
        - name: pg-socket-dir
          emptyDir: {}
        - name: configmap-init-ns-as
          configMap:
            name: chirpstack-v4-postgresql-config-map
            defaultMode: 0755
            items:
              - key: 001.init-chirpstack-v4.sh
                path: 001.init-chirpstack-v4.sh
              - key: 002.chirpstack-v4_extensions.sh
                path: 002.chirpstack-v4_extensions.sh
        - name: oci-fss-pvc-postgresql-data-chirpstack-v4-ns-as
          persistentVolumeClaim:
            claimName: oci-fss-pvc-postgresql-data-chirpstack-v4-ns-as
      restartPolicy: "Always" # Unsupported value: "unless-stopped": supported values: "Always", "OnFailure", "Never".
status: {}
