04.chirpstack_v4/kubernetes/10.chirpstack-v4-redis__Deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirpstack-v4-redis-deployment
  namespace: chirpstack-v4
  labels:
    app: chirpstack-v4-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chirpstack-v4-redis-deployment
  template:
    metadata:
      labels:
        app: chirpstack-v4-redis-deployment
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: chirpstack-v4-redis
          image: redis:7.2
          securityContext:
            runAsUser: 999
            runAsGroup: 999
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: oci-fss-pvc-redis-data-chirpstack-v4
              mountPath: /data
          command: ["redis-server"]
          args: ["--dir", "/data"]
          imagePullPolicy: Always
      volumes:
        - name: oci-fss-pvc-redis-data-chirpstack-v4
          persistentVolumeClaim:
            claimName: oci-fss-pvc-redis-data-chirpstack-v4
      restartPolicy: "Always" # Unsupported value: "unless-stopped": supported values: "Always", "OnFailure", "Never".
status: {}
