04.chirpstack_v4/kubernetes/22.chirpstack-v4-rest-api__Deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirpstack-v4-rest-api-deployment
  namespace: chirpstack-v4
  labels:
    app: chirpstack-v4-rest-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chirpstack-v4-rest-api-deployment
  template:
    metadata:
      labels:
        app: chirpstack-v4-rest-api-deployment
    spec:
      containers:
      - name: chirpstack-v4-rest-api
        image: chirpstack/chirpstack-rest-api:4.15
        command: ["/usr/bin/chirpstack-rest-api"]
        args: ["--server", "chirpstack-v4-service.chirpstack-v4.svc.cluster.local:443", "--bind", "0.0.0.0:8090", "--insecure", "--cors", "\"*\""]
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 8090
        imagePullPolicy: Always
      restartPolicy: "Always" # Unsupported value: "unless-stopped": supported values: "Always", "OnFailure", "Never".
status: {}
