04.chirpstack_v4/kubernetes/28.chirpstack-v4-toolbox__Deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolbox
  namespace: chirpstack-v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toolbox
  template:
    metadata:
      labels:
        app: toolbox
    spec:
      containers:
        - name: toolbox
          image: nicolaka/netshoot:latest
          command: ["sleep", "infinity"]
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
