04.chirpstack_v4/kubernetes/04.chirpstack-v4-mosquitto__Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: chirpstack-v4-mosquitto-service
  namespace: chirpstack-v4
  labels:
    app: chirpstack-v4-mosquitto-service
spec:
  selector:
    app: chirpstack-v4-mosquitto-deployment
  # clusterIP: "None"
  type: ClusterIP
  ports:
    # - name: "mqtt-1883-to-1893"
    #   protocol: TCP
    #   port: 1893
    #   targetPort: 1883
    - name: "mqtts-8883-to-8883"
      protocol: TCP
      port: 8883
      targetPort: 8883
