04.chirpstack_v4/kubernetes/11.chirpstack-v4-redis__Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: chirpstack-v4-redis-service
  namespace: chirpstack-v4
  labels:
    app: chirpstack-v4-redis-service
spec:
  selector:
    app: chirpstack-v4-redis-deployment
  # clusterIP: "None"
  type: ClusterIP
  ports:
    - name: "6379-to-6389"
      protocol: TCP
      port: 6389
      targetPort: 6379
