04.chirpstack_v4/kubernetes/18.chirpstack-v4__Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: chirpstack-v4-service
  namespace: chirpstack-v4
  labels:
    app: chirpstack-v4-service
spec:
  selector:
    app: chirpstack-v4-deployment
  # clusterIP: "None"
  type: ClusterIP
  ports:
    - name: "ui-port" # 8080-to-443
      protocol: TCP
      port: 443
      targetPort: 8080
      # nodePort: 31443
