04.chirpstack_v4/kubernetes/23.chirpstack-v4-rest-api__Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: chirpstack-v4-rest-api-service
  namespace: chirpstack-v4
  labels:
    app: chirpstack-v4-rest-api-service
spec:
  selector:
    app: chirpstack-v4-rest-api-deployment
  # clusterIP: "None"
  type: ClusterIP
  ports:
  - name: "8090-to-443"
    protocol: TCP
    port: 443
    targetPort: 8090
