04.chirpstack_v4/kubernetes/26.chirpstack-v4-rest-api__Ingress.yaml

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chirpstack-v4-rest-api-ingress
  namespace: chirpstack-v4
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # /$1 # /$2
  labels:
    app: chirpstack-v4-rest-api-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chirpstack-v4-rest-api.adailsilva.com.br
      secretName: chirpstack-v4-rest-api-tls
  rules:
    - host: chirpstack-v4-rest-api.adailsilva.com.br
      http:
        paths:
          - path: /?(.*) # /?(.*) # /rest-api(/|$)(.*)
            pathType: Prefix # ImplementationSpecific # Exact # Prefix
            backend:
              service:
                name: chirpstack-v4-rest-api-service
                port:
                  number: 443
